--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "marked": "^14.1.2",
     "path": "^0.12.7"
